--- a/README.Rmd
+++ b/README.Rmd
@@ -16,9 +16,14 @@ knitr::opts_chunk$set(
 # uscore
 
 <!-- badges: start -->
+[![Codecov test coverage](https://codecov.io/gh/probaverse/uscore/branch/main/graph/badge.svg)](https://app.codecov.io/gh/probaverse/uscore?branch=main)
 <!-- badges: end -->
 
-The goal of uscore is to ...
+The goal of uscore is to calculate empirical-based scores from data. 
+
+- `uscore()` essentially fits data so they are equally spaced between 0 and 1. 
+- `nscore()` spaces data along a standard Normal distribution. 
+- `rpscore()` calculates empirical return periods.
 
 ## Installation
 
